--- a/cgi.css
+++ b/cgi.css
@@ -28,6 +28,18 @@ h1
 	margin: 0;
 	padding: 1%;
 	text-align: center;
+	text-shadow: 0 1px 0 #ccc,
+	             0 2px 0 #c9c9c9,
+	             1px 3px 0 #999,
+	             1px 4px 1px #888,
+	             1px 5px 1px #555,
+	             0 6px 1px rgba(0, 0, 0, 0.1),
+	             0 0 5px rgba(0, 0, 0, 0.1),
+	             0 1px 3px rgba(0, 0, 0, 0.3),
+	             0 3px 5px rgba(0, 0, 0, 0.2),
+	             0 5px 10px rgba(0, 0, 0, 0.25),
+	             0 10px 10px rgba(0, 0, 0, 0.2),
+	             0 20px 20px rgba(0, 0, 0, 0.15);
 }
 h2
 {
